# tracklab-small-inference

./: README.md
hydra_plugins/tracklab_searchpath_plugin/: tracklab_searchpath_plugin.py
inference/: README.md  pyproject.toml  run.py  wrappers.py
inference/configs/: config.yaml  pyproject.toml
inference/configs/detector/: openpifpaf.yaml  yolodartfish.yaml  yolov5.yaml  yolov8.yaml
inference/configs/track/: af_link.yaml  bot_sort.yaml  byte_track.yaml  deep_oc_sort.yaml  oc_sort.yaml  strong_sort.yaml
inference/configs/visualization/: visualization.yaml
inference/examples/: eval_example.py  inference_example.py  inference_online_example.py  process_folder.py  read_json.py
plugins/track/aflink/: AppFreeLink.py  config.py  dataset.py  train.py
plugins/track/bot_sort/: bot_sort.py
plugins/track/deep_oc_sort/: reid_multibackend.py
tracklab/configs/dataset/: dartfish.yaml
tracklab/configs/eval/: dartfish.yaml
tracklab/configs/modules/bbox_detector/: yolov5.yaml
tracklab/datastruct/: tracking_dataset.py
tracklab/pipeline/: module.py
tracklab/utils/: collate.py
tracklab/wrappers/datasets/: __init__.py
tracklab/wrappers/datasets/dartfish/: __init__.py  dartfish.py
tracklab/wrappers/detect_multiple/: __init__.py  yolov5_api.py
tracklab/wrappers/eval/: __init__.py  dartfish_evaluator.py
tracklab/wrappers/track/: strong_sort_api.py
